--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOWpe8S/LHpX67EP2cwU3zM",
+      "authorship_tag": "ABX9TyOsm47mPJunW21F746xjCxR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5606,50 +5606,67 @@
         "test_samples = []\n",
         "test_labels = []\n",
         "\n",
-        "for sample,label in random.sample(list(fmnist_test), k = 6):\n",
+        "for sample,label in random.sample(list(fmnist_test), k = 30):\n",
         "  test_samples.append(sample)\n",
         "  test_labels.append(label)\n",
         "\n",
         "pred_probs = make_predictions(fmnist_model, test_samples, device)\n",
-        "print(pred_probs)\n",
+        "print(pred_probs[:6])\n",
         "pred_classes = pred_probs.argmax(dim=1)\n",
-        "print(f\"\\n{pred_classes}\\n{test_labels}\")"
+        "print(f\"\\n{pred_classes[:6]}\\n{test_labels[:6]}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "qujUaDSF7jJL",
-        "outputId": "2d07b243-4862-43ba-a8d2-95b021c81090"
+        "outputId": "ce23c3a4-81d9-4017-ff04-3cbdc864055a"
       },
-      "execution_count": 50,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[8.7064e-05, 3.7734e-05, 3.8990e-05, 2.5834e-05, 1.9593e-04, 1.9309e-03,\n",
-            "         2.3690e-04, 5.8596e-02, 1.0367e-03, 9.3781e-01],\n",
-            "        [5.0878e-06, 9.4768e-06, 6.6710e-07, 1.7622e-05, 1.2307e-06, 1.0830e-03,\n",
-            "         3.4179e-06, 9.9859e-01, 2.9569e-05, 2.5978e-04],\n",
-            "        [3.4051e-06, 3.1716e-06, 2.8060e-07, 3.2556e-08, 1.8841e-06, 9.9868e-01,\n",
-            "         2.7432e-05, 8.9225e-07, 3.5780e-05, 1.2501e-03],\n",
-            "        [1.1537e-02, 1.1948e-03, 1.4873e-01, 5.3178e-03, 8.2339e-01, 1.2808e-05,\n",
-            "         6.9318e-03, 5.6923e-07, 2.8914e-03, 8.6200e-07],\n",
-            "        [9.7738e-01, 2.1058e-05, 3.1566e-03, 1.0597e-04, 1.2525e-05, 8.2863e-07,\n",
-            "         1.9259e-02, 1.5664e-06, 5.1461e-05, 8.4313e-06],\n",
-            "        [9.8098e-01, 3.2030e-05, 2.5390e-04, 2.4217e-04, 9.3859e-06, 8.6920e-07,\n",
-            "         1.8449e-02, 3.1363e-07, 2.7654e-05, 1.4939e-07]])\n",
+            "tensor([[7.8000e-01, 1.2948e-05, 1.2264e-03, 1.3989e-04, 2.6780e-05, 1.2232e-05,\n",
+            "         2.1842e-01, 3.0779e-07, 1.6154e-04, 7.0520e-07],\n",
+            "        [8.4391e-06, 1.5689e-05, 2.1720e-04, 1.5602e-03, 7.4650e-05, 1.4447e-04,\n",
+            "         5.7588e-05, 1.3461e-04, 9.9774e-01, 4.4704e-05],\n",
+            "        [8.2102e-03, 2.6644e-04, 9.2823e-01, 5.9060e-04, 1.2780e-02, 1.4264e-06,\n",
+            "         4.9587e-02, 1.9505e-07, 3.2789e-04, 7.1953e-06],\n",
+            "        [7.0959e-02, 1.4573e-03, 5.4033e-01, 1.4134e-03, 1.6977e-01, 7.5202e-05,\n",
+            "         2.1460e-01, 2.8205e-05, 1.0985e-03, 2.6695e-04],\n",
+            "        [1.0842e-04, 4.1611e-05, 1.5522e-05, 6.5750e-05, 4.7007e-06, 9.9318e-01,\n",
+            "         2.5982e-05, 2.3086e-03, 4.1934e-03, 5.8618e-05],\n",
+            "        [2.0298e-02, 4.6447e-04, 7.0780e-01, 3.3419e-03, 2.4764e-01, 2.9584e-06,\n",
+            "         1.7536e-02, 1.5584e-07, 2.9209e-03, 2.3750e-07]])\n",
             "\n",
-            "tensor([9, 7, 5, 4, 0, 0])\n",
-            "[9, 7, 5, 4, 0, 6]\n"
+            "tensor([0, 8, 2, 2, 5, 2])\n",
+            "[0, 8, 2, 4, 5, 2]\n"
           ]
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##### Visualization"
+      ],
+      "metadata": {
+        "id": "XakN4AY3aK_A"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "plt.figure(figsize=(9,9))\n",
+        "\n",
+        "for i,sample in enumerate(test_samples):\n",
+        "\n",
+        "  if pred_classes[i] != test_labels[i]:\n",
+        "\n",
+        "    plt.subplot(3,2,i+1)"
+      ],
       "metadata": {
         "id": "Y5XqfhcAKtd6"
       },
