--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMd+r+gcUgYoSMb+xJ7tGux",
+      "authorship_tag": "ABX9TyMWsqexNGb+6A0DejTpBJER",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +25,27 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/MuhammadHelmyOmar/PyTorch_Projects/blob/main/custom_datasets.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Recap"
+      ],
+      "metadata": {
+        "id": "mCcUgmhR43El"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Steps to solve a machine learning problem:\n",
+        "1. Find a dataset\n",
+        "2. Turn the dataset into numbers\n",
+        "3. Create a model or find a pretrained one to extract the patterns in the data for prediction"
+      ],
+      "metadata": {
+        "id": "oTdoQWu0STDs"
+      }
     },
     {
       "cell_type": "code",
