--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMWsqexNGb+6A0DejTpBJER",
+      "authorship_tag": "ABX9TyMCckC21FuKbaAxotc/x4JS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,6 +45,24 @@
       ],
       "metadata": {
         "id": "oTdoQWu0STDs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Intro"
+      ],
+      "metadata": {
+        "id": "3N6AP54GtHtG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Custom Data: a collection of data relating to your problem and can be comprised from almost anything.\n"
+      ],
+      "metadata": {
+        "id": "ZeI28jrvtkIv"
       }
     },
     {
