--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCckC21FuKbaAxotc/x4JS",
+      "authorship_tag": "ABX9TyMNAnOqmTeU+axzNi+f5ZSs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "- Custom Data: a collection of data relating to your problem and can be comprised from almost anything.\n"
+        "- Custom Data: a collection of data relating to your problem.\n",
+        "\n"
       ],
       "metadata": {
         "id": "ZeI28jrvtkIv"
