--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNAnOqmTeU+axzNi+f5ZSs",
+      "authorship_tag": "ABX9TyMa6ZsdUncZvhT4aI2iqUa/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,6 +60,8 @@
       "cell_type": "markdown",
       "source": [
         "- Custom Data: a collection of data relating to your problem.\n",
+        "- PyTorch provides functions to load in different custom datasets in the **TorchVision**, **TorchText**, **TorchAudio**, and **TorchRec** domain libraries.\n",
+        "- If the previous functions are not enough, we can subclass **torch.utils.data.Dataset** and customize it to our needs.\n",
         "\n"
       ],
       "metadata": {
