--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM/gQJIJfU+op96LCGW7CQM",
+      "authorship_tag": "ABX9TyMfBkEj5nAGOlGEah0wj9qV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,12 +63,63 @@
         "- PyTorch provides functions to load in different custom datasets in the **TorchVision**, **TorchText**, **TorchAudio**, and **TorchRec** domain libraries.\n",
         "- If the previous functions are not enough, we can subclass **torch.utils.data.Dataset** and customize it to our needs.\n",
         "- In this notebook, we will not use an in-built PyTorch dataset.\n",
-        "-\n",
+        "- We will load a custom dataset and train a model on it.\n",
         "\n"
       ],
       "metadata": {
         "id": "ZeI28jrvtkIv"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Setting up environment"
+      ],
+      "metadata": {
+        "id": "Q4xG5UcCJV5I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "from torch import nn"
+      ],
+      "metadata": {
+        "id": "dbquGT-bJlA2"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.__version__"
+      ],
+      "metadata": {
+        "id": "vQLMpcckJs1y",
+        "outputId": "e284060a-d6d6-4426-c615-471240bc52e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2.6.0+cu124'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -77,7 +128,10 @@
         "id": "SKYl1-Xj3UNh"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Using a device-agnostic code is a best practice in DL\n",
+        "\n"
+      ]
     }
   ]
 }
