--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMfBkEj5nAGOlGEah0wj9qV",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyNK+j8AcGqNzYwaHWTzRJDZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -83,7 +85,9 @@
       "cell_type": "code",
       "source": [
         "import torch\n",
-        "from torch import nn"
+        "from torch import nn\n",
+        "\n",
+        "torch.__version__"
       ],
       "metadata": {
         "id": "dbquGT-bJlA2"
@@ -93,44 +97,35 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "torch.__version__"
-      ],
+      "execution_count": 3,
       "metadata": {
-        "id": "vQLMpcckJs1y",
-        "outputId": "e284060a-d6d6-4426-c615-471240bc52e2",
+        "id": "SKYl1-Xj3UNh",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "outputId": "a862c743-b486-476d-decf-37988740bd5b"
       },
-      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'2.6.0+cu124'"
+              "'cuda'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "SKYl1-Xj3UNh"
-      },
-      "outputs": [],
+      ],
       "source": [
         "# Using a device-agnostic code is a best practice in DL\n",
-        "\n"
+        "\n",
+        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "device"
       ]
     }
   ]
