--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNK+j8AcGqNzYwaHWTzRJDZ",
+      "authorship_tag": "ABX9TyMM3sZ1lwJS/0DFcQKtRYmv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -127,6 +127,34 @@
         "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
         "device"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Setting up Data"
+      ],
+      "metadata": {
+        "id": "JCnUOmmkTnih"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Start with existing data.\n",
+        "-"
+      ],
+      "metadata": {
+        "id": "ufL3yhUZT68y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Py62vOqnTe4z"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
