--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMM3sZ1lwJS/0DFcQKtRYmv",
+      "authorship_tag": "ABX9TyO3xv9hZ+0FxHkd8xQDGlxF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -141,6 +141,7 @@
       "cell_type": "markdown",
       "source": [
         "- Start with existing data.\n",
+        "- We will use a subset of the [Food-101](https://data.vision.ee.ethz.ch/cvl/datasets_extra/food-101/) dataset.\n",
         "-"
       ],
       "metadata": {
