--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO3xv9hZ+0FxHkd8xQDGlxF",
+      "authorship_tag": "ABX9TyNA+Rkjkzz9kPodw9ffQ/32",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,7 +142,9 @@
       "source": [
         "- Start with existing data.\n",
         "- We will use a subset of the [Food-101](https://data.vision.ee.ethz.ch/cvl/datasets_extra/food-101/) dataset.\n",
-        "-"
+        "- Food-101 splits to:\n",
+        "    - 1000 images of 101 different kinds of foods = 101,000 total images\n",
+        "    - 750,750 for training and 250,250 for testing"
       ],
       "metadata": {
         "id": "ufL3yhUZT68y"
