--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyNA+Rkjkzz9kPodw9ffQ/32",
+      "authorship_tag": "ABX9TyMOwcEkIrBNcDYknTdkgb1x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,8 +13,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -92,12 +90,12 @@
       "metadata": {
         "id": "dbquGT-bJlA2"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "SKYl1-Xj3UNh",
         "colab": {
@@ -144,17 +142,37 @@
         "- We will use a subset of the [Food-101](https://data.vision.ee.ethz.ch/cvl/datasets_extra/food-101/) dataset.\n",
         "- Food-101 splits to:\n",
         "    - 1000 images of 101 different kinds of foods = 101,000 total images\n",
-        "    - 750,750 for training and 250,250 for testing"
+        "    - 750,750 for training and 250,250 for testing\n",
+        "- Food-101 is included in PyTorch now."
       ],
       "metadata": {
         "id": "ufL3yhUZT68y"
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Formatting the custom data"
+      ],
+      "metadata": {
+        "id": "YbcWeywwfwXf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- We will start with three food classes: Sushi, Pizza, and Steak.\n",
+        "-"
+      ],
+      "metadata": {
+        "id": "kPSKrmxifz0Q"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Py62vOqnTe4z"
+        "id": "S_WwLuIkgsNH"
       },
       "execution_count": null,
       "outputs": []
