--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMOwcEkIrBNcDYknTdkgb1x",
+      "authorship_tag": "ABX9TyM86ybMspbHs8Tr1T/p1wGM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,35 +88,54 @@
         "torch.__version__"
       ],
       "metadata": {
-        "id": "dbquGT-bJlA2"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "SKYl1-Xj3UNh",
+        "id": "dbquGT-bJlA2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
-        "outputId": "a862c743-b486-476d-decf-37988740bd5b"
+        "outputId": "585bef08-8698-4b97-c292-7320104299bd"
       },
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'cuda'"
+              "'2.5.1+cu124'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "SKYl1-Xj3UNh",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "0af2c81e-71ae-46a8-ce81-1b67a1d433e1"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'cpu'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
         }
       ],
       "source": [
@@ -161,8 +180,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "- We will start with three food classes: Sushi, Pizza, and Steak.\n",
-        "-"
+        "- We will start with three food classes: Sushi, Pizza, and Steak."
       ],
       "metadata": {
         "id": "kPSKrmxifz0Q"
@@ -170,9 +188,55 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import torchvision as tv\n",
+        "\n",
+        "tv.__version__"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "S_WwLuIkgsNH",
+        "outputId": "3ffba097-8439-4dbc-a0e5-abafa9254a38"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'0.20.1+cu124'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Setting up data directory\n",
+        "import pathlib\n",
+        "\n",
+        "data_dir = pathlib.Path(\"../data\")"
+      ],
+      "metadata": {
+        "id": "6wopWbj5ow6n"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "S_WwLuIkgsNH"
+        "id": "iBfEyeGRpAlg"
       },
       "execution_count": null,
       "outputs": []
