--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM86ybMspbHs8Tr1T/p1wGM",
+      "authorship_tag": "ABX9TyNnwBh3s3xWYU18if7vkBgV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -190,7 +190,7 @@
       "cell_type": "code",
       "source": [
         "import torchvision as tv\n",
-        "\n",
+        "import pathlib # Setting up data directory\n",
         "tv.__version__"
       ],
       "metadata": {
@@ -221,10 +221,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Setting up data directory\n",
-        "import pathlib\n",
-        "\n",
-        "data_dir = pathlib.Path(\"../data\")"
+        "train_data = tv.datasets(root = pathlib.Path(\"../data\"),\n",
+        "                         split = \"train\",\n",
+        "                         download = True)\n",
+        "\n"
       ],
       "metadata": {
         "id": "6wopWbj5ow6n"
