--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnwBh3s3xWYU18if7vkBgV",
+      "authorship_tag": "ABX9TyNXzCMOOwmKvRWxCBAFHJGf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -221,22 +221,77 @@
     {
       "cell_type": "code",
       "source": [
-        "train_data = tv.datasets(root = pathlib.Path(\"../data\"),\n",
+        "train_data = tv.datasets.Food101(root = pathlib.Path(\"../data\"),\n",
         "                         split = \"train\",\n",
         "                         download = True)\n",
-        "\n"
+        "\n",
+        "test_data = tv.datasets.Food101(root = pathlib.Path(\"../data\"),\n",
+        "                                split = \"test\",\n",
+        "                                download = True)"
       ],
       "metadata": {
-        "id": "6wopWbj5ow6n"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6wopWbj5ow6n",
+        "outputId": "a33eb4b5-e23c-4635-92ca-ea71c97eca89"
       },
-      "execution_count": 4,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading https://data.vision.ee.ethz.ch/cvl/food-101.tar.gz to ../data/food-101.tar.gz\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 5.00G/5.00G [02:34<00:00, 32.4MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting ../data/food-101.tar.gz to ../data\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_data, test_data"
+      ],
+      "metadata": {
+        "id": "iBfEyeGRpAlg"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class_names = train_data.classes\n",
+        "len(class_names)\n",
+        "class_names[:20]"
+      ],
       "metadata": {
-        "id": "iBfEyeGRpAlg"
+        "id": "rZq54tf_JYFL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(class_names[])"
+      ],
+      "metadata": {
+        "id": "NdRdlml1Jlhc"
       },
       "execution_count": null,
       "outputs": []
