--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOxvFKmVJKxAZK25u7SI8Vm",
+      "authorship_tag": "ABX9TyOnjnG8pK3o/CnUphg3ka09",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -201,7 +200,9 @@
       "source": [
         "import torchvision as tv\n",
         "import pathlib # Setting up data directory\n",
-        "tv.__version__"
+        "\n",
+        "tv.__version__\n",
+        "data_dir = pathlib.Path(\"../data\")"
       ],
       "metadata": {
         "colab": {
@@ -231,11 +232,11 @@
     {
       "cell_type": "code",
       "source": [
-        "train_data = tv.datasets.Food101(root = pathlib.Path(\"../data\"),\n",
+        "train_data = tv.datasets.Food101(root = data_dir,\n",
         "                         split = \"train\",\n",
         "                         download = True)\n",
         "\n",
-        "test_data = tv.datasets.Food101(root = pathlib.Path(\"../data\"),\n",
+        "test_data = tv.datasets.Food101(root = data_dir,\n",
         "                                split = \"test\",\n",
         "                                download = True)"
       ],
@@ -417,9 +418,25 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import random"
+      ],
       "metadata": {
         "id": "VFEBP_PpY5sF"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_path = data_dir / \"food-101\" / \"images\"\n",
+        "target_classes = [\"sushi\", \"steak\", \"pizza\"]\n",
+        "\n",
+        "def\n"
+      ],
+      "metadata": {
+        "id": "4qLFQoQFvtnu"
       },
       "execution_count": null,
       "outputs": []
