--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnjnG8pK3o/CnUphg3ka09",
+      "authorship_tag": "ABX9TyOjgEtlo/Cnp9fEJ0KsIAS8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -433,7 +433,16 @@
         "data_path = data_dir / \"food-101\" / \"images\"\n",
         "target_classes = [\"sushi\", \"steak\", \"pizza\"]\n",
         "\n",
-        "def\n"
+        "def get_subset(image_path = data_path,\n",
+        "               data_splits = ['train', 'test'],\n",
+        "               target_classes = ['pizza', 'steak', 'sushi'],\n",
+        "               amount = 0.1,\n",
+        "               seed = 42):\n",
+        "\n",
+        "    random.seed(seed)\n",
+        "    label_splits = {}\n",
+        "\n",
+        ""
       ],
       "metadata": {
         "id": "4qLFQoQFvtnu"
