--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrixY2BazLHDXOwxmzXd7f",
+      "authorship_tag": "ABX9TyOQ9/SwFph/wH5uF51dSJOB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -415,7 +415,11 @@
         "\n",
         "        label_path = data_dir / \"food-101\" / \"meta\" / f\"{data_split}.txt\"\n",
         "        with open(label_path, 'r') as f:\n",
-        "            labels = [line.strip(\"\\n\") for line ]"
+        "            labels = [line.strip(\"\\n\") for line in f.readlines() if line.split(\"/\")[0] in target_classes]\n",
+        "\n",
+        "        # Extracting a random subset\n",
+        "        n_samples = round(amount * len(labels))\n",
+        ""
       ],
       "metadata": {
         "id": "4qLFQoQFvtnu"
