--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOQ9/SwFph/wH5uF51dSJOB",
+      "authorship_tag": "ABX9TyN/aZuXtHR3Vo5+2XwqtjNC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -419,6 +419,9 @@
         "\n",
         "        # Extracting a random subset\n",
         "        n_samples = round(amount * len(labels))\n",
+        "        print(f\"[INFO] Extracting random subset of {n_samples} images for {data_split}..\")\n",
+        "        sample_images = random.sample(labels, k = n_samples)\n",
+        "\n",
         ""
       ],
       "metadata": {
