--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/aZuXtHR3Vo5+2XwqtjNC",
+      "authorship_tag": "ABX9TyOEJoP8KYBoU3pTkbzHQ1ud",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -422,6 +422,8 @@
         "        print(f\"[INFO] Extracting random subset of {n_samples} images for {data_split}..\")\n",
         "        sample_images = random.sample(labels, k = n_samples)\n",
         "\n",
+        "        # Apply full path\n",
+        "        image_paths = [pathlib.Path(str(image_path / sample_image) + \".jpg\") for sample_image in sample images]\n",
         ""
       ],
       "metadata": {
