--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEJoP8KYBoU3pTkbzHQ1ud",
+      "authorship_tag": "ABX9TyNbfaDnYHa9ZSzSeki4NHi9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -423,13 +423,75 @@
         "        sample_images = random.sample(labels, k = n_samples)\n",
         "\n",
         "        # Apply full path\n",
-        "        image_paths = [pathlib.Path(str(image_path / sample_image) + \".jpg\") for sample_image in sample images]\n",
-        ""
+        "        image_paths = [pathlib.Path(str(image_path / sample_image) + \".jpg\") for sample_image in sample_images]\n",
+        "        label_splits[data_split] = image_paths\n",
+        "\n",
+        "    return label_splits"
       ],
       "metadata": {
         "id": "4qLFQoQFvtnu"
       },
-      "execution_count": 9,
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "label_splits = get_subset()\n",
+        "label_splits.keys(), label_splits['test'][:14]"
+      ],
+      "metadata": {
+        "id": "zzcbKM9LW9R3",
+        "outputId": "be31317a-381d-45e1-d2f9-0b02e6591e6f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[INFO] Creating train split..\n",
+            "[INFO] Extracting random subset of 225 images for train..\n",
+            "[INFO] Creating test split..\n",
+            "[INFO] Extracting random subset of 75 images for test..\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(dict_keys(['train', 'test']),\n",
+              " [PosixPath('../data/food-101/images/sushi/684266.jpg'),\n",
+              "  PosixPath('../data/food-101/images/sushi/988559.jpg'),\n",
+              "  PosixPath('../data/food-101/images/sushi/1987407.jpg'),\n",
+              "  PosixPath('../data/food-101/images/sushi/3837522.jpg'),\n",
+              "  PosixPath('../data/food-101/images/sushi/887831.jpg'),\n",
+              "  PosixPath('../data/food-101/images/steak/966174.jpg'),\n",
+              "  PosixPath('../data/food-101/images/pizza/344397.jpg'),\n",
+              "  PosixPath('../data/food-101/images/pizza/416067.jpg'),\n",
+              "  PosixPath('../data/food-101/images/steak/1868005.jpg'),\n",
+              "  PosixPath('../data/food-101/images/pizza/714866.jpg'),\n",
+              "  PosixPath('../data/food-101/images/pizza/194643.jpg'),\n",
+              "  PosixPath('../data/food-101/images/sushi/2394442.jpg'),\n",
+              "  PosixPath('../data/food-101/images/sushi/1742201.jpg'),\n",
+              "  PosixPath('../data/food-101/images/pizza/195160.jpg')])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "PTgOibBFXXHu"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
