--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNbfaDnYHa9ZSzSeki4NHi9",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNhDCowlLuaYyBOUX7rdibZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -400,6 +401,8 @@
         "data_path = data_dir / \"food-101\" / \"images\"\n",
         "target_classes = [\"sushi\", \"steak\", \"pizza\"]\n",
         "\n",
+        "DATA_AMOUNT = 0.1\n",
+        "\n",
         "def get_subset(image_path = data_path,\n",
         "               data_splits = ['train', 'test'],\n",
         "               target_classes = ['pizza', 'steak', 'sushi'],\n",
@@ -437,15 +440,15 @@
     {
       "cell_type": "code",
       "source": [
-        "label_splits = get_subset()\n",
+        "label_splits = get_subset(amount = DATA_AMOUNT)\n",
         "label_splits.keys(), label_splits['test'][:14]"
       ],
       "metadata": {
-        "id": "zzcbKM9LW9R3",
-        "outputId": "be31317a-381d-45e1-d2f9-0b02e6591e6f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zzcbKM9LW9R3",
+        "outputId": "be31317a-381d-45e1-d2f9-0b02e6591e6f"
       },
       "execution_count": 18,
       "outputs": [
@@ -486,8 +489,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Moving images to dedicated folders"
+      ],
+      "metadata": {
+        "id": "KWeNgS22nCK8"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Create target directory path\n",
+        "target_dir_name = f\"../data/pizz_sushi_steak_{str(int(DATA_AMOUNT*100))}_precent\"\n",
+        "print(f\"Creating directory: '{target_dir_name}'\")\n",
+        "\n"
+      ],
       "metadata": {
         "id": "PTgOibBFXXHu"
       },
