--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNhDCowlLuaYyBOUX7rdibZ",
+      "authorship_tag": "ABX9TyOMltPeTPA1x7FeAfQ+7vB2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -434,7 +434,7 @@
       "metadata": {
         "id": "4qLFQoQFvtnu"
       },
-      "execution_count": 13,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -448,9 +448,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zzcbKM9LW9R3",
-        "outputId": "be31317a-381d-45e1-d2f9-0b02e6591e6f"
+        "outputId": "fcb01c20-c4ab-4211-b7be-ef58a5c2c6a3"
       },
-      "execution_count": 18,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,7 +484,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 21
         }
       ]
     },
@@ -503,10 +503,35 @@
         "# Create target directory path\n",
         "target_dir_name = f\"../data/pizz_sushi_steak_{str(int(DATA_AMOUNT*100))}_precent\"\n",
         "print(f\"Creating directory: '{target_dir_name}'\")\n",
-        "\n"
+        "\n",
+        "# Set up the directories\n",
+        "target_dir = pathlib.Path(target_dir_name)\n",
+        "# Make the directories\n",
+        "target_dir.mkdir(parents = True, exist_ok = True)"
       ],
       "metadata": {
-        "id": "PTgOibBFXXHu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PTgOibBFXXHu",
+        "outputId": "56779409-43b9-4bd2-f0e7-32b4b1dad629"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Creating directory: '../data/pizz_sushi_steak_10_precent'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Tc1mCz-V6-Vo"
       },
       "execution_count": null,
       "outputs": []
